.gitignore: improve comments

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-# build artefacts
+# build files and artefacts
 config.h
 dwmblocks
 dwmblocks.o
 dwmblocks.1
 
-# vim undo
+# vim undo files
 .*.un~
 
 # backup files
 *.bak
 
-# tarballs
+# dist tarballs
 *.tar.gz
